[package]
name = "actix_pg_connector"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-web = "4.6.0"
deadpool-postgres = { version = "0.13.2", features = ["serde", "default"] }
postgres-types = { version = "0.2.6", features = ["chrono-04", "with-chrono-0_4"] }
serde_json = "1.0.117"
url = "2.5.0"
serde = { version = "1.0.202", features = ["derive"] }
